truncation to prevent spilling of more elements, notifs fix

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1678,7 +1678,7 @@ font-weight: bold;
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #ccc; /* Grey background to represent profile picture */
+  /* background-color: #ccc; Grey background to represent profile picture */
 }
 
 .body-container_profile {
@@ -1814,6 +1814,7 @@ body.popup-open {
   border-radius: 50%; /* Ensure the image is circular */
   transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Initial shadow */
+  z-index: 100;
 }
 
 .current-avatar:hover {
